--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -52,15 +52,19 @@
 }
 
 .text-blue {
-  color: blue;
+  color: rgb(255, 0, 0);
 }
 
 .text-success {
   color: #4CAF50; 
 }
 
+.text-red {
+  color: red;
+}
+
 .text-error {
-  color: #FF0000; 
+  color: #ffc400; 
 }
 
 .modal-footer .btn {
